--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 	
 <body>
 	<header>MultiKEY</header>
+	
+	<main>
 	<div class="wrapper">
 	<a href="#" class="button">LOGIN</a>
 		</div>
+	</main>
+	
 </body>
 </html>
