Adding P(Welcomes you) adjusting size + adjusting button position

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<header>MultiKEY</header>
 	
 	<main>
+		<p>Welcomes you</p>
 	<div class="wrapper">
 	<a href="#" class="button">LOGIN</a>
 		</div>
