--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 	
 <body>
-	<header>MultiKEY</header>
 	
 	<main>
-		<p>Welcomes you</p>
+		
+	<img src="billeder/Multikey Logo white.png" width="300" height="100" alt=""/>
+	
+<header>MultiKEY</header>
+	
+
+  <p>Welcomes you</p>
 	<div class="wrapper">
 	<a href="#" class="button">LOGIN</a>
 		</div>
