--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 	<div class="wrapper">
 	<a href="#" class="button">LOGIN</a>
 		</div>
+		
+		<p2>Don't have an account yet? <br>
+		No problem, just press here <br>
+		to create one.</p2>
 	</main>
 	
 </body>
