Adding Img class + CSS

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 		
 		<br>
 		
-	<img src="billeder/Multikey Logo white.png" width="300" height="100" alt=""/>
-	
+	<div class="img"><img src="billeder/Multikey Logo white.png" width="300" height="100" alt=""/>
+		
+	</div>
 <header>MultiKEY</header>
 		
 <p>Welcomes you</p>
