--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 	
 <body>
 	
-	<main>
+	
+		
+		
+		
+	<div class="wrapper">
+		
+	<main>	
 		
 		<br>
 		
@@ -33,6 +39,7 @@
 		No problem, just press here <br>
 		to create one.</p2>
 	</main>
-	
+		
+	</div>	
 </body>
 </html>
