Removing and Adjusting P2 to P and Adjusting Logo size

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 		
 		<br>
 		
-	<div class="img"><img src="billeder/Multikey Logo white.png" width="300" height="100" alt=""/>
+	<div class="img"><img src="billeder/Multikey Logo white.png" width="450" height="150" alt=""/>
 		
 	</div>
-<header>MultiKEY</header>
+<header>Welcomes you</header>
 		
-<p>Welcomes you</p>
 		
+		<br>
 		<br>
 		<br>
 	
@@ -35,9 +35,8 @@
 		
 		<br>
 		
-		<p2>Don't have an account yet? <br>
-		No problem, just press here <br>
-		to create one.</p2>
+		<p>Don't have an account yet? <br>
+		No problem, just press here <br> to create one.</p>
 	</main>
 		
 	</div>	
