Adjusting tekst and CSS

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 	
 <body>
-	
-	
 		
 		
 		
@@ -21,24 +19,20 @@
 		
 		<br>
 		
-	<div class="img"><img src="billeder/Multikey Logo white.png" width="450" height="150" alt=""/>
+	<div class="img"><img src="billeder/Multikey Logo white.png" width="80%" alt="LogoBillede"/>
 		
 	</div>
 <header>Welcomes you</header>
 		
+		<br>
 		
-		<br>
-		<br>
-		<br>
 	
 		<div class="wrapper">
 	<a href="#" class="button">LOGIN</a>
 		</div>
 		
-		<br>
-		
-		<p>Don't have an account yet? <br>
-		No problem, just press here <br> to create one.</p>
+		<p>Don't have an account yet?
+		Create one now</p>
 	</main>
 		
 	</div>	
