--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-<title>Untitled Document</title>
+<title>MultiKEY</title>
 </head>
 	
 <body>
@@ -29,10 +29,10 @@
 	
 		<div class="wrapper">
 	<a href="#" class="button">LOGIN</a>
+			<a href="page1.html"></a>
 		</div>
 		
-		<p>Don't have an account yet?
-		Create one now</p>
+		<p>Create new account here!</p>
 	</main>
 		
 	</div>	
