Adding pinlogin site + CSS style

--- a/pinlogin.html
+++ b/pinlogin.html
@@ -11,5 +11,35 @@
 </head>
 
 <body>
+	
+	<div class="wrapper">
+		
+	<main>	
+		
+		<br>
+		
+	
+	<header>
+	<div class="img"><img src="billeder/Multikey Logo white.png" width="80%" alt="LogoBillede"/>
+		
+	</div>
+		
+		</header>
+	
+ <p>LOGIN TO YOUR ACCOUNT</p>
+		
+		<p2>Type in your chosn pincode - <br> or use the fingerprint scanner</p2>
+		
+		<br>
+		
+	
+		<div class="wrapper">
+	<a href="#" class="button">PIN CODE</a>
+			<a href="page1.html"></a>
+		</div>
+		
+		
+	</main>
+		
 </body>
 </html>
