--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		
 	
 		<div class="wrapper">
-	<a href="#" class="button">LOGIN</a>
-			<a href="page1.html"></a>
+	
+		<div class="button"><a href="pinlogin.html">LOGIN</a>
 		</div>
 		
 		<p>Create new account here!</p>
