Adding Fingerprint page and styling login page

--- a/pinlogin.html
+++ b/pinlogin.html
@@ -28,15 +28,20 @@
 	
  <p>LOGIN TO YOUR ACCOUNT</p>
 		
-		<p2>Type in your chosn pincode - <br> or use the fingerprint scanner</p2>
+		
+		<div class="wrapper">
+			
+	<p2>Type in your chosen pincode - or use the</p2>
+			
+		<div class="button"><a href="pinlogin.html">Fingerprint Scanner</a>
+		</div>
+			
+		
+		
+		</div> 
 		
 		<br>
 		
-	
-		<div class="wrapper">
-	<a href="#" class="button">PIN CODE</a>
-			<a href="page1.html"></a>
-		</div>
 		
 		
 	</main>
