Adding loging + succes + multiple styleing of Ps

--- a/pinlogin.html
+++ b/pinlogin.html
@@ -31,20 +31,35 @@
 		
 		<div class="wrapper">
 			
-	<p2>Type in your chosen pincode - or use the</p2>
-			
-		<div class="button"><a href="pinlogin.html">Fingerprint Scanner</a>
+			<p2>Type in your chosen pincode - or use the <a href="#" style="color:#67CFAC">fingerprint Scanner</a></p2>
 		</div>
+		
+		<br>
+		<br>
+		<br>
+		
+		<div class="pin">
 			
+		<input inputmode="numeric" type="password" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
+			
+	    </div>
 		
-		
-		</div> 
-		
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 		<br>
 		
 		
+		<p3><a href="sucess.html" style="color:#67CFAC">Continue</a></p3>
 		
-	</main>
+		</main>
+		
+	    </div> 
+		
+	
 		
 </body>
 </html>
