Adding signup to masterbranch + styling create new account to signup

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
 	
 		<div class="button"><a href="pinlogin.html">LOGIN</a>
 		</div>
+			
+			<br>
+			<br>
 		
-		<p>Create new account here!</p>
+		<p2><a href="signup2.html" style="color:#FFFFFF">Create new account here!</a></p2>
 	
 	</div>	
 	
