--- a/signup2.html
+++ b/signup2.html
@@ -5,6 +5,7 @@
         <title>signup2</title>
 
         <link rel="stylesheet" href="signup2-style.css">
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet"> 
         <script src="signup2-js.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
