--- a/sucess.html
+++ b/sucess.html
@@ -5,7 +5,7 @@
 <title>succes</title>
 </head>
 <link rel="stylesheet" href="loginhold.css">
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
 <body>
 	
 	
