--- a/slideshowmultikey.html
+++ b/slideshowmultikey.html
@@ -9,30 +9,36 @@
 
 <body>
 	
+	
+	<div class="wrapper">
+		
+	<main>	
+	
 	<div class="slideshow-container">
 
-<div class="mySlides fade">
+<div class="Slides fade">
   <div class="numbertext">1 / 3</div>
   <img src="billeder/profil1.png" style="width:100%" alt="Nøgleliste">
-  <div class="text">Caption Text</div>
 </div>
+		
 
-<div class="mySlides fade">
+<div class="Slides fade">
   <div class="numbertext">2 / 3</div>
   <img src="billeder/profil2.png" style="width:100%" alt="Aktivnøgleliste">
-  <div class="text">Caption Two</div>
 </div>
+		
 
-<div class="mySlides fade">
+<div class="Slides fade">
   <div class="numbertext">3 / 3</div>
   <img src="billeder/profil1.png" style="width:100%" alt="Afsluttetnøgleliste">
-  <div class="text">Caption Three</div>
 </div>
+		
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
 </div>
+		
 <br>
 
 <div style="text-align:center">
@@ -41,6 +47,7 @@
   <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
 
+		
 <script>
 var slideIndex = 1;
 showSlides(slideIndex);
@@ -55,10 +62,12 @@ function currentSlide(n) {
 
 function showSlides(n) {
   var i;
-  var slides = document.getElementsByClassName("mySlides");
+  var slides = document.getElementsByClassName("Slides");
   var dots = document.getElementsByClassName("dot");
+ 
   if (n > slides.length) {slideIndex = 1}    
   if (n < 1) {slideIndex = slides.length}
+ 
   for (i = 0; i < slides.length; i++) {
       slides[i].style.display = "none";  
   }
@@ -69,7 +78,9 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
 }
 </script>
-
+		
+		</main>
+	</div>
 	
 </body>
 </html>
