setting dots edited

--- a/menu4.html
+++ b/menu4.html
@@ -39,7 +39,7 @@
                 <div class="submenu">
                   <li><a href="#remove">Remove & Lock Keys</a></li>
                   <li><a href="#share">Share Keys</a></li>
-                  <li><a href="#how">How <span1 style="color:#ffffff">Multi</span1><span2 style="color:#ED6B86">Key</span2> Works</a></li>
+                  <li><a href="#how">How <span1 style="color:#ffffff">Multi</span1><span2 style="color:#ED6B86">KEY</span2> Works</a></li>
                 </div>
               
               <div class="mainmenu">
