Footer added with logo

--- a/menu4.html
+++ b/menu4.html
@@ -137,10 +137,11 @@
 
 
 
-	<footer>
-		<img src="billeder/Multikey Logo white.png" alt="Logo for MultiKEY">
-	
-	</footer>
+	<div class="footer">
+		<div class="logo">
+			<img src="billeder/Multikey Logo white.png" alt="Logo for MultiKEY">
+		</div>
+	</div>
   
 	
 </body>
