--- a/menu4.html
+++ b/menu4.html
@@ -139,7 +139,7 @@
 
 	<div class="footer">
 		<div class="logo">
-			<img src="billeder/Multikey Logo white.png" alt="Logo for MultiKEY">
+			<img src="billeder/Multikey Logo white.png" alt="Logo for MultiKEY" width="40">
 		</div>
 	</div>
   
