--- a/signup3.html
+++ b/signup3.html
@@ -12,9 +12,9 @@
 <body>
 <!-- Circles which indicates the steps of the form: -->
 	  <div class="steps">
-		<span class="step">1</span>
-		<span class="step">2</span>
-		<span class="step">3</span>
+		<span class="step"><p>1</p></span>
+		<span class="step"><p>2</p></span>
+		<span class="step"><p>3</p></span>
 	  </div>
 	<form id="regForm" action="/action_page.php"> 
 	 	
@@ -31,24 +31,24 @@
 		
 		<div class="innercontainer">
 	  
-	  	<label for="mobile"><b>MOBILE</b></label>
-    	<input type="text" placeholder="Your mobile number here" name="mobile" oninput="this.className = ''" >
-	  
-	  	<label for="email"><b>EMAIL</b></label>
-    	<input type="text" placeholder="Your email address here" name="email" oninput="this.className = ''" >
-	  
-	  	<label for="pin"><b>PINCODE</b></label>
-    	<input type="password" placeholder="Write your pincode here" name="pin" oninput="this.className = ''" >
-	  
-	  	<label for="cpin"><b>CONFIRM PINCODE</b></label>
-    	<input type="password" placeholder="Confirm your pincode" name="pin-repeat" oninput="this.className = ''" >
-	  
-        <label>
-		<div class="checkmark"><input type="checkbox" name="fingerprint">
-        <p3> Mark here if you want to use fingerprint scanner or face recognition to login. </p3></div> 
-		</label>
-			
-		<p4>By creating an account you agree to our <a href="#" style="color:#67CFAC">Terms of Service and Privacy Policy</a>.</p4>
+			<label for="mobile"><b>MOBILE</b></label>
+			<input type="text" placeholder="Your mobile number here" name="mobile" oninput="this.className = ''" >
+
+			<label for="email"><b>EMAIL</b></label>
+			<input type="text" placeholder="Your email address here" name="email" oninput="this.className = ''" >
+
+			<label for="pin"><b>PINCODE</b></label>
+			<input type="password" placeholder="Write your pincode here" name="pin" oninput="this.className = ''" >
+
+			<label for="cpin"><b>CONFIRM PINCODE</b></label>
+			<input type="password" placeholder="Confirm your pincode" name="pin-repeat" oninput="this.className = ''" >
+
+			<label>
+			<div class="checkmark"><input type="checkbox" name="fingerprint">
+			<p3> Mark here if you want to use fingerprint scanner or face recognition to login. </p3></div> 
+			</label>
+
+			<p4>By creating an account you agree to our <a href="#" style="color:#67CFAC">Terms of Service and Privacy Policy</a>.</p4>
 
 			<div class="clearfix"></div>
 		</div>
