Names and styles edited for a better overview

--- a/pinlogin.html
+++ b/pinlogin.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-<link rel="stylesheet" href="loginhold.css">
+<link rel="stylesheet" href="pinlogin-style.css">
 
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
 	
-<title>PinLogIn</title>
+<title>Login - Pincode</title>
 </head>
 
 <body>
