--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="index-style.css">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
 <title>MultiKEY</title>
 </head>
