--- a/menu4.html
+++ b/menu4.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Profile Page With Menu</title>
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet"> 
-		<link rel="stylesheet" href="menu4.css">
+		<link rel="stylesheet" href="menu4-style.css">
 		<script src="https://kit.fontawesome.com/266ad4a4ba.js" crossorigin="anonymous"></script>
 </head>
 
