Style rettet og nye links til signup sheet

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 		
 		<br>
 		
-	<div class="img"><img src="billeder/Multikey Logo white.png" width="80%" alt="LogoBillede"/>
+	<div class="img"><img src="billeder/Multikey Logo white.png" width="90%" alt="LogoBillede"/>
 		
 	</div>
-<header>Welcomes you</header>
+<header>welcomes you</header>
 		
 		<br>
 		
@@ -35,7 +35,7 @@
 			<br>
 			<br>
 		
-		<p2><a href="signup2.html" style="color:#FFFFFF">Create new account here!</a></p2>
+		<p2><a href="signup3.html" style="color:#FFFFFF">Create new account here!</a></p2>
 	
 	</div>	
 	
