--- a/pinlogin.html
+++ b/pinlogin.html
@@ -1,62 +1,51 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Login - Pincode</title>
 	
-<link rel="stylesheet" href="pinlogin-style.css">
+		<link rel="stylesheet" href="pinlogin-style.css">
 
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
 	
-<title>Login - Pincode</title>
+
 </head>
 
 <body>
 	
-	<div class="wrapper">
+	<div class="wrapper1">
 		
-	<main>	
-		
-		<br>
-		
-	
-	<header>
-	<div class="img"><img src="billeder/Multikey Logo white.png" width="80%" alt="LogoBillede"/>
-		
-	</div>
+			
+		<header>
+			
+			<div class="img"><img src="billeder/Multikey Logo white.png" width="80%" alt="LogoBillede"/>
+			</div>
 		
 		</header>
+		
+		
+				<div class="wrapper2">
+		
+					<p>LOGIN TO YOUR ACCOUNT</p>
+					
+					<p2>Type in your chosen pincode - or use the <a href="#" style="color:#67CFAC">fingerprint Scanner</a></p2>
+
+				</div>
+		
 	
- <p>LOGIN TO YOUR ACCOUNT</p>
-		
-		
-		<div class="wrapper">
-			
-			<p2>Type in your chosen pincode - or use the <a href="#" style="color:#67CFAC">fingerprint Scanner</a></p2>
-		</div>
-		
-		<br>
-		<br>
-		<br>
-		
 		<div class="pin">
 			
-		<input inputmode="numeric" type="password" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
+			<input inputmode="numeric" type="password" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
 			
 	    </div>
 		
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
+
 		
 		
-		<p3><a href="sucess.html" style="color:#67CFAC">Continue</a></p3>
+		<p3><a href="success.html" style="color:#67CFAC">Continue</a></p3>
 		
-		</main>
+		
 		
 	    </div> 
 		
