success page styled

--- a/success.html
+++ b/success.html
@@ -1,31 +1,26 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Welcome Page</title>
-</head>
-<link rel="stylesheet" href="success-style.css">
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
+	<head>
+	<meta charset="utf-8">
+	<title>Welcome Page</title>
+
+		<link rel="stylesheet" href="success-style.css">
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
+	</head>
+	
 <body>
 		
+		<header>
 			
-	<main>	
+			<div class="img"><img src="billeder/Multikey Logo white.png" width="80%" alt="Logo for MultiKEY"/>
 		
-		
-	
-	<header>
-	<div class="img"><img src="billeder/Multikey Logo white.png" width="80%" alt="Logo for MultiKEY"/>
-		
-	</div>
+			</div>
 		
 		</header>
 		
-	
-		<p5>Great to have you back</p5>
-		
-		
-		</main>
-	
+		<div class="wrapper">
+			<p5>Great to have <br> you back</p5>
+		</div>
 	
 </body>
 </html>
