--- a/success.html
+++ b/success.html
@@ -6,6 +6,7 @@
 
 		<link rel="stylesheet" href="success-style.css">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="loading-style.css">
 	</head>
 	
 <body>
@@ -19,8 +20,26 @@
 		</header>
 		
 		<div class="wrapper">
+			
+		<div class="container">
+			
+	<div class="radial"></div>
+	<div class="radial"></div>
+	<div class="radial"></div>
+	<div class="radial"></div>
+	<div class="radial"></div>
+	<div class="radial"></div>
+	<div class="radial"></div>
+	<div class="radial"></div>
+			
+</div>
 			<p5>Great to have <br> you back</p5>
+			
+	
+			
 		</div>
 	
+	
+	<script src="loading-js.js"></script>
 </body>
 </html>
