pinlogin rettelser til style

--- a/signup3.html
+++ b/signup3.html
@@ -38,7 +38,7 @@
 			<input type="text" placeholder="Your email address here" name="email" oninput="this.className = ''" >
 
 			<label for="pin"><b>PINCODE</b></label>
-			<input type="password" placeholder="Write your pincode here" name="pin" oninput="this.className = ''" >
+			<input type="password" placeholder="Write your new 4-digit pincode here" name="pin" oninput="this.className = ''" >
 
 			<label for="cpin"><b>CONFIRM PINCODE</b></label>
 			<input type="password" placeholder="Confirm your pincode" name="pin-repeat" oninput="this.className = ''" >
