Corrected menu listing and new success page for signup

--- a/menu4.html
+++ b/menu4.html
@@ -43,7 +43,7 @@
 						  <li><i class="fa fa-headset fa-2x"></i><a href="#">Contact</a></li></div>
 						<div class="submenu">
 						  <li><a href="#remove">Help</a></li>
-						  <li><a href="#share">About NHS</a></li>
+						  <li><a href="#share">About NHS Group</a></li>
 							</div>
 
 					 <div class="mainmenu">
