--- a/signup3.html
+++ b/signup3.html
@@ -16,7 +16,7 @@
 		<span class="step"><p>2</p></span>
 		<span class="step"><p>3</p></span>
 	  </div>
-	<form id="regForm" action="/action_page.php"> 
+	<form id="regForm" action="signup-success.html"> 
 	 	
 	
 	
@@ -122,6 +122,7 @@ function showTab(n) {
   }
   if (n == (x.length - 1)) {
     document.getElementById("nextBtn").innerHTML = "I'm done";
+	  
   } else {
     document.getElementById("nextBtn").innerHTML = "Next";
   }
