--- a/menu4.html
+++ b/menu4.html
@@ -34,7 +34,7 @@
 					<div class="mainmenu">
 					  		<li><i class="fa fa-key fa-2x"></i><a href="#">My Keys</a></li></div>
 						<div class="submenu">
-						  <li><a href="#remove">Remove & Lock Keys</a></li>
+						  <li><a href="#remove">Remove &amp; Lock Keys</a></li>
 						  <li><a href="#share">Share Keys</a></li>
 						  <li><a href="#how">How <span1 style="color:#ffffff">Multi</span1><span2 style="color:#ED6B86">KEY</span2> Works</a></li>
 							</div>
