--- a/styleguide.html
+++ b/styleguide.html
@@ -9,7 +9,7 @@
 
 
 
-	<link rel="stylesheet" href="style.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="guidestyle.css"> <!-- CSS reset -->
   	
 	<title>Style Guide</title>
 </head>
