--- a/styleguide.html
+++ b/styleguide.html
@@ -37,8 +37,8 @@
 			<h2>Branding</h2>
 
 			<ul>
-				<li class="cd-box"><img src="logo-ver-1.jpg"></li>
-				<li class="cd-box"><img src="logo-ver-2.jpg"></li>
+				<li class="cd-box"><img src="logo-ver-1.jpg" alt="Logo version 1"></li>
+				<li class="cd-box"><img src="logo-ver-2.jpg" alt="Logo version 2"></li>
 			</ul>
 
 			<ul>
