--- a/styleguide.html
+++ b/styleguide.html
@@ -100,20 +100,20 @@
 			<h2>Icons</h2>
 
 			<ul class="box-icon">
-               <li><i class="fa fa-key fa-2x"></i>
-			  <li><i class="fa fa-headset fa-2x"></i>
-              <li><i class="fas fa-user-circle fa-2x"></i>
-              <li><i class="fas fa-sign-out-alt fa-2x"></i>
-              <li><i class="fas fa-plus fa-2x"></i>
-              <li><i class="fas fa-bars fa-2x"></i>
-              <li><i class="fas fa-ellipsis-v fa-2x"></i>
+				<li><i class="fa fa-key fa-2x"></i></li>
+				<li><i class="fa fa-headset fa-2x"></i></li>
+				<li><i class="fas fa-user-circle fa-2x"></i></li>
+				<li><i class="fas fa-sign-out-alt fa-2x"></i></li>
+				<li><i class="fas fa-plus fa-2x"></i></li>
+				<li><i class="fas fa-bars fa-2x"></i></li>
+				<li><i class="fas fa-ellipsis-v fa-2x"></i></li>
             </ul>
             
             	<ul class="box-icon2">
-                <li><i class="fas fa-star fa-2x"></i>
-                <li><i class="far fa-star fa-2x"></i>
-                <li><i class="fas fa-times fa-2x"></i>
-                <li><i class="fas fa-check fa-2x" style="color:#67CFAC;"></i>
+					<li><i class="fas fa-star fa-2x"></i></li>
+					<li><i class="far fa-star fa-2x"></i></li>
+					<li><i class="fas fa-times fa-2x"></i></li>
+					<li><i class="fas fa-check fa-2x" style="color:#67CFAC;"></i></li>
 			</ul>
 		</section>
         
