Adding img in styleguide

--- a/styleguide.html
+++ b/styleguide.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-	  <div class="cd-logo"><img src="Multikey Logo white.png" alt="Logo"></div>
+	  <div class="cd-logo"><img src="billeder/Multikey Logo white.png" alt="Logo"></div>
 
 		<nav>
 			<ul class="cd-main-nav">
@@ -37,8 +37,8 @@
 			<h2>Branding</h2>
 
 			<ul>
-				<li class="cd-box"><img src="logo-ver-1.jpg" alt="Logo version 1"></li>
-				<li class="cd-box"><img src="logo-ver-2.jpg" alt="Logo version 2"></li>
+				<li class="cd-box"><img src="billeder/logo-ver-1.jpg" alt="Logo version 1"></li>
+				<li class="cd-box"><img src="billeder/logo-ver-2.jpg" alt="Logo version 2"></li>
 			</ul>
 
 			<ul>
