logo size edited

--- a/success.html
+++ b/success.html
@@ -13,7 +13,7 @@
 		
 		<header>
 			
-			<div class="img"><img src="billeder/Multikey Logo white.png" width="80%" alt="Logo for MultiKEY"/>
+			<div class="img"><img src="billeder/Multikey Logo white.png" width: 300px; alt="Logo for MultiKEY"/>
 		
 			</div>
 		
@@ -40,11 +40,15 @@
 			<br>
 			
 			<p5>Great to have <br> you back</p5>
+			<br>
+			<br>
+			<br>
+			<br>
 			
-	
-			<p3><a href="success.html" style="color:#67CFAC">login</a></p3>
+			<p3><a href="menu4.html">Thanks!</a></p3>
 		</div>
 	
+			
 	
 	<script src="loading-js.js"></script>
 </body>
