Success linked to menu

--- a/success.html
+++ b/success.html
@@ -13,7 +13,7 @@
 		
 		<header>
 			
-			<div class="img"><img src="billeder/Multikey Logo white.png" width: 300px; alt="Logo for MultiKEY"/>
+			<div class="img"><img src="billeder/Multikey Logo white.png" width: 80%; alt="Logo for MultiKEY"/>
 		
 			</div>
 		
@@ -45,7 +45,7 @@
 			<br>
 			<br>
 			
-			<p3><a href="menu4.html">Thanks!</a></p3>
+			
 		</div>
 	
 			
