Adding fingerprint site with loading

--- a/fingerprintscanner.html
+++ b/fingerprintscanner.html
@@ -3,8 +3,53 @@
 <head>
 <meta charset="utf-8">
 <title>fingerprintscanner</title>
+	
+	<link rel="stylesheet" href="success-style.css">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="loading-style.css">
 </head>
 
 <body>
+	
+	<header>
+			
+			<div class="img"><img src="billeder/Multikey Logo white.png" width: 300px; alt="Logo for MultiKEY"/>
+		
+			</div>
+		
+		</header>
+		
+		<div class="wrapper">
+			
+		<div class="container">
+			
+				<div class="radial"></div>
+				<div class="radial"></div>
+				<div class="radial"></div>
+				<div class="radial"></div>
+				<div class="radial"></div>
+				<div class="radial"></div>
+				<div class="radial"></div>
+				<div class="radial"></div>
+
+		</div>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			
+			<p5>Fingerprint<br>approved</p5>
+			<br>
+			<br>
+			<br>
+			<br>
+			
+			<p3><a href="menu4.html">Thanks!</a></p3>
+		</div>
+	
+			
+	
+	<script src="loading-js.js"></script>
 </body>
 </html>
