--- a/fingerprintscanner.html
+++ b/fingerprintscanner.html
@@ -39,17 +39,15 @@
 			<br>
 			<br>
 			
-			<p5>Fingerprint<br>approved</p5>
+			<p5>Fingerprint<br>is accepted</p5>
 			<br>
 			<br>
 			<br>
 			<br>
+					
 			
-			<p3><a href="menu4.html">Thanks!</a></p3>
-		</div>
+			</div>
 	
-			
-	
-	<script src="loading-js.js"></script>
-</body>
+		<script src="loading-js.js"></script>
+	</body>
 </html>
