--- a/menu4.html
+++ b/menu4.html
@@ -32,7 +32,7 @@
 
 				<ul id="menu">
 					<div class="mainmenu">
-					  		<li><i class="fa fa-key fa-2x"></i><a href="#">My Keys</a></li></div>
+					  		<li><i class="fa fa-key fa-2x"></i><a href="menu4.html">My Keys</a></li></div>
 						<div class="submenu">
 						  <li><a href="#remove">Remove &amp; Lock Keys</a></li>
 						  <li><a href="#share">Share Keys</a></li>
@@ -49,7 +49,7 @@
 					 <div class="mainmenu">
 							<li><i class="fas fa-user-circle fa-2x"></i><a href="#">My Account</a></li>
 						  
-							<li><i class="fas fa-sign-out-alt fa-2x"></i><a href="#">Log Out</a></li>
+							<li><i class="fas fa-sign-out-alt fa-2x"></i><a href="index.html">Log Out</a></li>
 							</div>
 				</ul>
 		</div>
