--- a/signup3.html
+++ b/signup3.html
@@ -139,9 +139,9 @@ showTab(currentTab);
 function showTab(n) { //styrer at det element som skal vises hedder tab
   
   var x = document.getElementsByClassName("tab");
-  x[n].style.display = "block"; //styrer buttons og hvad de hedder
-  
-  if (n == 0) {
+  x[n].style.display = "block"; 
+  //styrer buttons og hvad de hedder
+  if (n == 0) {			
     document.getElementById("prevBtn").style.display = "inline";
   } else {
     document.getElementById("prevBtn").style.display = "inline";
