--- a/styleguide.html
+++ b/styleguide.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-	  <div class="cd-logo"><img src="" alt="Logo"></div>
+	  <div class="cd-logo"><img src="billeder/lillelogo.png" alt="Logo"></div>
 
 		<nav>
 			<ul class="cd-main-nav">
@@ -37,8 +37,8 @@
 			<h2>Branding</h2>
 
 			<ul>
-				<li class="cd-box"><img src="logo-ver-1.jpg" alt="Logo version 1"></li>
-				<li class="cd-box"><img src="logo-ver-2.jpg" alt="Logo version 2"></li>
+				<li class="cd-box"><img src="billeder/logo-ver-1.jpg" alt="Logo version 1"></li>
+				<li class="cd-box"><img src="billeder/logo-ver-2.jpg" alt="Logo version 2"></li>
 			</ul>
 
 			<ul>
@@ -62,7 +62,7 @@
 					<div class="cd-color-swatch"></div><p>#67CFAC</p>
 				</li>
                  <li class="cd-box">
-					<div class="cd-color-swatch"></div><p>#FFFFFF</p>
+					<div class="cd-color-swatch"></div><p>#B3E7D6</p>
 				</li>
 
 				<li class="cd-box">
@@ -72,6 +72,7 @@
 				<li class="cd-box">
 					<div class="cd-color-swatch"></div><p>#F3F3F3</p>
 				</li>
+                
                 <li class="cd-box">
 					<div class="cd-color-swatch"></div><p>#FFFFFF</p>
 				</li>
