edits for verification

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,34 +15,32 @@
 		
 	<div class="wrapper">
 		
-	<main>	
 		
 		<br>
 		
-	<div class="img"><img src="billeder/Multikey Logo white.png" width="90%" alt="LogoBillede"/>
+		<div class="img"><img src="billeder/multikey-logo-white.png" alt="LogoBillede"/></div>
 		
-	</div>
-<header>welcomes you</header>
+		
+		<header>welcomes you</header>
 		
 		<br>
 		
 	
 		<div class="wrapper">
 	
-		<div class="button"><a href="pinlogin.html">LOGIN</a>
-		</div>
+			<div class="button"><br>
+				<a href="pinlogin.html">LOGIN</a>
+			</div>
 			
 			<br>
 			<br>
 		
-		<p2><a href="signup3.html" style="color:#FFFFFF">Create new account here!</a></p2>
+		</div>	
 	
-	</div>	
-	
-		
-		</main>
-	
+			
 	</div>
+	
+	<div class="text2"><a href="signup3.html" style="color:#FFFFFF">Create new account here!</a></div>
 	
 </body>
 </html>
