--- a/pinlogin.html
+++ b/pinlogin.html
@@ -16,7 +16,7 @@
 	
 		<header>
 			
-			<div class="img"><img src="billeder/Multikey Logo white.png" width="60%" alt="LogoBillede"/>
+			<div class="img"><img src="billeder/multikey-logo-white.png" width="60%" alt="LogoBillede"/>
 			</div>
 		
 		</header>
