--- a/success.html
+++ b/success.html
@@ -13,7 +13,7 @@
 		
 		<header>
 			
-			<div class="img"><img src="billeder/Multikey Logo white.png" width: 80%; alt="Logo for MultiKEY"/>
+			<div class="img"><img src="billeder/multikey-logo-white.png" width: 80%; alt="Logo for MultiKEY"/>
 		
 			</div>
 		
