edits for verification

--- a/fingerprintscanner.html
+++ b/fingerprintscanner.html
@@ -13,7 +13,7 @@
 	
 	<header>
 			
-			<div class="img"><img src="billeder/multikey-logo-white.png" width: 300px; alt="Logo for MultiKEY"/>
+			<div class="img"><img src="billeder/multikey-logo-white.png" alt="Logo for MultiKEY"/>
 		
 			</div>
 		
@@ -39,7 +39,7 @@
 			<br>
 			<br>
 			
-			<p5>Fingerprint<br>is accepted</p5>
+			<div class="text5">Fingerprint<br>is accepted</div>
 			<br>
 			<br>
 			<br>
