edited for verification

--- a/success.html
+++ b/success.html
@@ -13,7 +13,7 @@
 		
 		<header>
 			
-			<div class="img"><img src="billeder/multikey-logo-white.png" width: 80%; alt="Logo for MultiKEY"/>
+			<div class="img"><img src="billeder/multikey-logo-white.png" alt="Logo for MultiKEY"/>
 		
 			</div>
 		
@@ -39,7 +39,7 @@
 			<br>
 			<br>
 			
-			<p5>Great to have <br> you back</p5>
+			<div class="text5">Great to have <br> you back</div>
 			<br>
 			<br>
 			<br>
