edited for verification

--- a/styleguide.html
+++ b/styleguide.html
@@ -92,7 +92,7 @@
 			<h2>Buttons</h2>
 
 		  <div class="cd-box">
-              <div class="button"><p href="pinlogin.html">LOGIN</p>
+              <div class="button"><a href="pinlogin.html">LOGIN</a>
 		</div>
              <input type="button" name="next" class="next action-button" value="Next Step" />
 
@@ -132,9 +132,9 @@
                 <input type="password" name="pin" maxlength="4" placeholder="Write a 4-digit pincode here" />
                 <input type="password" name="cpin" maxlength="4" placeholder="Confirm your pincode" />
 
-            <label class="checkmark">
+            <div class="checkmark">
                 <div class="checkbox"><input type="checkbox" name="fingerprint"></div> 
-         </label>
+         </div>
 
           </fieldset>
             </div>
